--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,23 @@ version = '1.0'
 apply plugin: 'net.researchgate.release'
 
 buildscript {
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+
     dependencies {
         classpath 'net.researchgate:gradle-release:2.3.4'
     }
+}
+
+release {
+    failOnCommitNeeded = false
+    failOnPublishNeeded = false
+    failOnUpdateNeeded = false
+    failOnSnapshotDependencies = false
+    failOnUnversionedFiles = false
+    versionPropertyFile = 'version.properties'
 }
 
 repositories {
